Fixing styling and spacing issues

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,23 +1,4 @@
 .app {
     height: 100vh;
 
-    .sections{
-        width: 100%;
-        height: calc(100vh - 70px);
-        position: relative;
-        top: 70px;
-        scroll-behavior: smooth;
-        scroll-snap-type: y mandatory;
-        scroll-snap-align: start;
-        scrollbar-width: none;
-        &::-webkit-scrollbar{
-            display: none;
-        }
-
-        > *{
-            width: 100vw;
-            height: calc(100vh - 70px);
-        }
-
-    }
 }
