--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -1,4 +1,4 @@
-@import "../../global.scss";
+
 
 .portfolio {
   background-color: #dadfd9;
@@ -55,7 +55,7 @@
       }
 
       &:hover {
-        background-color: $mainColor;
+        background-color: black;
         img {
           opacity: 0.2;
           z-index: 0;
