--- a/src/components/portfolioList/portfolioList.scss
+++ b/src/components/portfolioList/portfolioList.scss
@@ -1,4 +1,3 @@
-@import "../../global.scss";
 
 .portfolioList {
   font-size: 14px;
@@ -8,7 +7,6 @@
   cursor: pointer;
 
   &.active {
-    background-color: $mainColor;
     color: white;
   }
 }
